--- a/projeto_modelos.tex
+++ b/projeto_modelos.tex
@@ -76,7 +76,7 @@
     \usepackage{lipsum}
     \usepackage{tabulary}
     \usepackage{tabularx}
-    %\usepackage{showframe}
+    % \usepackage{showframe}
   % }
 % }
 
@@ -108,21 +108,7 @@
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{verbatim}
-## standardGeneric for "show" defined from package "methods"
-## 
-## function (object) 
-## standardGeneric("show")
-## <bytecode: 0x00000198cb4a6578>
-## <environment: 0x00000198ca122220>
-## Methods may be defined for arguments: object
-## Use  showMethods(show)  for currently available ones.
-## (This generic function excludes non-simple inheritance; see ?setIs)
-\end{verbatim}
-\end{kframe}
-\end{knitrout}
+
 
 % cover { 
   \cleardoublepage
@@ -162,12 +148,16 @@ Usámos como suporte técnico a linguagem R através do uso de um computador pes
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlstd{listings} \hlkwb{<-} \hlkwd{read.csv}\hlstd{(}\hlkwd{here}\hlstd{(}\hlstr{"data"}\hlstd{,} \hlstr{"listings.csv"}\hlstd{))}
-\hlkwd{nrow}\hlstd{(listings)}
+\hlstd{df} \hlkwb{<-} \hlkwd{read.csv}\hlstd{(}\hlkwd{here}\hlstd{(}\hlstr{"data"}\hlstd{,} \hlstr{"listings.csv"}\hlstd{))}
+\hlstd{shape} \hlkwb{<-} \hlkwd{st_read}\hlstd{(}\hlkwd{here}\hlstd{(}\hlstr{"data"}\hlstd{,} \hlstr{"SF Planning Neighborhood Groups Map"}\hlstd{))}
+\hlkwd{tmap_mode}\hlstd{(}\hlstr{"plot"}\hlstd{)}
 \end{alltt}
-\begin{verbatim}
-## [1] 6629
-\end{verbatim}
+
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# tmap mode set to plotting}}\begin{alltt}
+\hlstd{shape_plot} \hlkwb{<-} \hlstd{shape} \hlopt{%>%}
+    \hlkwd{ggplot}\hlstd{()} \hlopt{+} \hlkwd{geom_sf}\hlstd{()} \hlopt{+} \hlkwd{theme}\hlstd{(}\hlkwc{legend.position} \hlstd{=} \hlstr{"bottom"}\hlstd{)}
+\end{alltt}
 \end{kframe}
 \end{knitrout}
 
@@ -178,8 +168,8 @@ A base de dados contém 6629 entradas, e cada uma delas representa um registo de
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlkwd{data.frame}\hlstd{(}\hlkwc{row.names} \hlstd{=} \hlkwd{colnames}\hlstd{(listings),}
-    \hlkwc{type} \hlstd{=} \hlkwd{sapply}\hlstd{(listings, class))} \hlopt{%>%}
+\hlkwd{data.frame}\hlstd{(}\hlkwc{row.names} \hlstd{=} \hlkwd{colnames}\hlstd{(df),}
+    \hlkwc{type} \hlstd{=} \hlkwd{sapply}\hlstd{(df, class))} \hlopt{%>%}
     \hlkwd{showT}\hlstd{()}
 \end{alltt}
 \end{kframe}\begingroup\fontsize{10}{12}\selectfont
@@ -253,11 +243,114 @@ De forma a perceber melhor a base dados, o \textit{Airbnb} disponibiliza de um "
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlcom{# listings %>% head(1) %>% t() %>%}
+\hlcom{# df %>% head(1) %>% t() %>%}
 \hlcom{# showT(T)}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
+Para o nosso objetivo, algumas colunas não vão ser úteis, devido à sua naturaza. Estas são o id, name, as categorias que referem informações sobre o hóspede\sidenote{Estas colunas conseguem justificar valores atípicos, principalmente em termos de preço; e.g. Um preço extremamente alto pode acontecer devido a um hotel de luxo na cidade. Estes problemas vão ser discutidos mais à frente.}, a disponibilidade do alojamento durante o ano, e a licença do alojamento. 
+
+Cada registo contém as coordenadas geográficas, e se as representármos graficamente, podemos verificar que uma grande parte dos alojamentos concentrados encontram-se a nordoeste da cidade entre [distritos], mas que também existem muitos alojamentos no resto das cidades.  %TODO remove if not needed
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{shape_plot} \hlopt{+} \hlkwd{geom_point}\hlstd{(}\hlkwc{data} \hlstd{= df,}
+    \hlkwd{aes}\hlstd{(}\hlkwc{y} \hlstd{= latitude,} \hlkwc{x} \hlstd{= longitude),}
+    \hlkwc{alpha} \hlstd{=} \hlnum{0.5}\hlstd{,} \hlkwc{color} \hlstd{=} \hlstr{"red"}\hlstd{,}
+    \hlkwc{size} \hlstd{=} \hlnum{0.1}\hlstd{)}
+\end{alltt}
+\end{kframe}\begin{marginfigure}
+\includegraphics[width=\maxwidth]{figure/chunk-plotPlace-1} \end{marginfigure}
+
+\end{knitrout}
+Inesperadamente, o mapa mostra alguns pontos de alojamento fora da cidade, mas julgamos que não vá interferir com as nossas análises, devido ao correto agrupamento\sidenote{Demonstrado mais à frente.} e à proximidade da cidade. Embora a razão nos seja desconhecida, acreditamos que o próprio Airbnb agrupa desta forma esses locais devido à sua proximidade com a cidade. \\
+A concentração torna-se mais óbvia quando visualizamos o mapa de calor.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{rast} \hlkwb{<-} \hlstd{(shape_plot} \hlopt{+} \hlkwd{stat_bin2d}\hlstd{(}\hlkwc{data} \hlstd{= df,}
+    \hlkwd{aes}\hlstd{(}\hlkwc{x} \hlstd{= longitude,} \hlkwc{y} \hlstd{= latitude),}
+    \hlkwc{alpha} \hlstd{=} \hlnum{0.7}\hlstd{,} \hlkwc{bins} \hlstd{=} \hlnum{30}\hlstd{,} \hlkwc{linejoin} \hlstd{=} \hlstr{"round"}\hlstd{)} \hlopt{+}
+    \hlkwd{scale_fill_viridis_c}\hlstd{(}\hlkwc{option} \hlstd{=} \hlstr{"C"}\hlstd{))}
+\hlstd{rast}
+\end{alltt}
+\end{kframe}\begin{marginfigure}
+\includegraphics[width=\maxwidth]{figure/chunk-rasterPlaces-1} \end{marginfigure}
+
+\end{knitrout}
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# rast %>% extractLegend}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+O mapa claramente demonstra a concentração de alojamentos na zona clara, mas também consegue-se observar uma grande quantidade, embora mais dispersos, na zona central.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{df} \hlopt{%>%}
+    \hlkwd{group_by}\hlstd{(neighbourhood)} \hlopt{%>%}
+    \hlkwd{summarise}\hlstd{(}\hlkwc{n} \hlstd{=} \hlkwd{n}\hlstd{(),} \hlkwc{freq} \hlstd{= n}\hlopt{/}\hlkwd{nrow}\hlstd{(df))} \hlopt{%>%}
+    \hlkwd{arrange}\hlstd{(}\hlopt{-}\hlstd{n)} \hlopt{%>%}
+    \hlkwd{head}\hlstd{(}\hlnum{8}\hlstd{)} \hlopt{%>%}
+    \hlkwd{showT}\hlstd{()}
+\end{alltt}
+\end{kframe}\begingroup\fontsize{10}{12}\selectfont
+
+\begin{RTable}{c|c|c}
+\hline
+neighbourhood & n & freq\\
+\hline
+\cellcolor{gray!6}{Downtown/Civic Center} & \cellcolor{gray!6}{745} & \cellcolor{gray!6}{0.1123850}\\
+\hline
+Mission & 558 & 0.0841756\\
+\hline
+\cellcolor{gray!6}{South of Market} & \cellcolor{gray!6}{450} & \cellcolor{gray!6}{0.0678835}\\
+\hline
+Western Addition & 418 & 0.0630563\\
+\hline
+\cellcolor{gray!6}{Nob Hill} & \cellcolor{gray!6}{328} & \cellcolor{gray!6}{0.0494796}\\
+\hline
+Outer Sunset & 281 & 0.0423895\\
+\hline
+\cellcolor{gray!6}{Bernal Heights} & \cellcolor{gray!6}{280} & \cellcolor{gray!6}{0.0422386}\\
+\hline
+Haight Ashbury & 276 & 0.0416352\\
+\hline
+\end{RTable}
+\endgroup{}
+
+\end{knitrout}
+A tabela mostra que a maioria dos alojamentos listados estão localizados no distrito de \textit{Downtown/Civic Center} e \textit{Mission}.
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{shape_plot} \hlopt{+} \hlkwd{geom_point}\hlstd{(}\hlkwc{data} \hlstd{= df,}
+    \hlkwd{aes}\hlstd{(}\hlkwc{y} \hlstd{= latitude,} \hlkwc{x} \hlstd{= longitude,}
+        \hlkwc{color} \hlstd{= neighbourhood),}
+    \hlkwc{alpha} \hlstd{=} \hlnum{0.5}\hlstd{,} \hlkwc{size} \hlstd{=} \hlnum{0.1}\hlstd{)} \hlopt{+}
+    \hlkwd{theme}\hlstd{(}\hlkwc{legend.position} \hlstd{=} \hlstr{"none"}\hlstd{)}
+\end{alltt}
+\end{kframe}\begin{marginfigure}
+\includegraphics[width=\maxwidth]{figure/chunk-plotNeighbs-1} \end{marginfigure}
+
+\begin{kframe}\begin{alltt}
+\hlcom{## -- chunk-hullNeighbs}
+\hlstd{hull} \hlkwb{<-} \hlstd{shape_plot} \hlopt{+} \hlkwd{geom_mark_hull}\hlstd{(}\hlkwc{data} \hlstd{= df,}
+    \hlkwd{aes}\hlstd{(}\hlkwc{y} \hlstd{= latitude,} \hlkwc{x} \hlstd{= longitude,}
+        \hlkwc{fill} \hlstd{= neighbourhood),}
+    \hlkwc{expand} \hlstd{=} \hlnum{0}\hlstd{,} \hlkwc{radius} \hlstd{=} \hlnum{0}\hlstd{,} \hlkwc{alpha} \hlstd{=} \hlnum{0.7}\hlstd{,}
+    \hlkwc{linewidth} \hlstd{=} \hlnum{0.1}\hlstd{)}
+\hlstd{hull} \hlopt{+} \hlkwd{theme}\hlstd{(}\hlkwc{legend.position} \hlstd{=} \hlstr{"none"}\hlstd{)}
+\end{alltt}
+\end{kframe}\begin{marginfigure}
+\includegraphics[width=\maxwidth]{figure/chunk-plotNeighbs-2} \end{marginfigure}
+
+\end{knitrout}
+
+
 
 \nobibliography{references.bib}
 \bibliographystyle{plainnat}
